<resources>
    <string name="app_name">Homeworks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_orders">My Orders</string>
    <string name="track_order">Track Order</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="type_your_review_here">Type your review here...</string>
    <string name="please_give_your_rating_also_your_review"><![CDATA[Please give your rating & also your review...]]></string>
    <string name="leave_a_review">Leave a Review</string>
    <string name="how_is_your_order">How is your order?</string>
    <string name="payment">Payment</string>
    <string name="card_management">Card Management</string>
    <string name="add_new">Add new+</string>
    <string name="or_check_out_with">or check out with</string>
    <string name="add_card">Add card</string>
    <string name="cvv">CVV</string>
    <string name="expires">Expires</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="visa">Visa</string>
    <string name="mastercard">MasterCard</string>
    <string name="add_new_card">Add new card</string>
    <string name="do_you_really_want_to_delete_card">Do You Really Want to Delete Card?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login_successful">Login Successful!</string>
    <string name="login_failed">Login failed</string>
    <string name="user_session">user_session</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="registration_failed">Registration failed</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="remember_me">Remember Me</string>
    <string name="profiles">Profiles</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="read">Read</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="enter_your_passcode">Enter your passcode</string>
    <string name="security_screen">Security screen</string>
</resources>