<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layer"
    tools:context=".fragments.SecurityFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/security_screen"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/enter_your_passcode"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <LinearLayout
        android:id="@+id/Indicators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInstruction">

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/dot_unselected" />
        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/dot_unselected" />
        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/dot_unselected" />
        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/dot_unselected" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridKeypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Indicators">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn9"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFingerPrint"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:background="@drawable/ic_fingerprint_scaled"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn0"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:text="@string/_0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            style="@style/KeypadButton"
            android:layout_margin="10dp"
            android:background="@drawable/ic_delete_scaled"
            tools:ignore="SpeakableTextPresentCheck" />
    </GridLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/forgot_password"
        android:textColor="#6F6C6C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gridKeypad" />
</androidx.constraintlayout.widget.ConstraintLayout>








