<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background= "@color/white">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/first_name"
        android:textColor="@color/black"
        android:padding="12dp"
        android:background="@drawable/custom_edittext"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/last_name"
        android:textColor="@color/black"
        android:padding="12dp"
        android:background="@drawable/custom_edittext"
        android:textSize="16sp"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:padding="12dp"
        android:background="@drawable/custom_edittext"
        android:textSize="16sp"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnRead"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/read"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tvUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginTop="20dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>
