<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".PaymentFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/payment"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#000000" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_management"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/tvAddNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new"
            android:textSize="20sp"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:layout_marginStart="90dp"/>
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/cardViewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#E0E0E0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or_check_out_with"
        android:textSize="14sp"
        android:textColor="#A0A0A0"
        android:layout_marginBottom="16dp"/>
    <ImageView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/payments"
        android:scaleType="fitCenter"
        android:layout_gravity="center"/>
</LinearLayout>
