<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AddCardFragment">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toStartOf="@id/titleText"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_new_card"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <include
            android:id="@+id/masterLayout"
            layout="@layout/master_item"/>

        <include
            android:id="@+id/visaLayout"
            layout="@layout/visa_item"/>
    </ViewSwitcher>

    <RadioGroup
        android:id="@+id/rgCardType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/viewSwitcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rbMasterCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mastercard"
            android:checked="true"
            android:textColor="#000000"
            app:buttonTint="#000000"/>

        <RadioButton
            android:id="@+id/rbVisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visa"
            android:textColor="#000000"
            app:buttonTint="#000000"
            android:layout_marginStart="16dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvCardholderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardholder_name"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/rgCardType"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"/>

    <EditText
        android:id="@+id/etCardholderName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:textColor="#000000"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCardholderName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/etCardholderName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"/>

    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCardNumber"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvExpiryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expires"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/etCardNumber"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"/>

    <EditText
        android:id="@+id/etExpiryDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext_background"
        android:inputType="date"
        android:padding="12dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@id/etCVV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExpiryDate"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvCVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvv"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tvExpiryDate"
        app:layout_constraintStart_toEndOf="@id/etExpiryDate"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/etCVV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etExpiryDate"
        app:layout_constraintTop_toBottomOf="@id/tvCVV"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnAddCard"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/add_card"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCVV" />
</androidx.constraintlayout.widget.ConstraintLayout>
